--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Product Filter and Search</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="wrapper">
+            <div id="search-container">
+                <input type="search" id="search-input"
+                    placeholder="Search product name here ..">
+                <button id="search">Search</button>
+            </div>
 
+            <div id="buttons">
+                <button class="button-value">All</button>
+                <button class="button-value">Topwear</button>
+                <button class="button-value">Buttomwear</button>
+                <button class="button-value">Jacket</button>
+                <button class="button-value">Watch</button>
+            </div>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
