--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <button class="button-value">Jacket</button>
                 <button class="button-value">Watch</button>
             </div>
+            
+            <div id="products"></div>
         </div>
         <script src="script.js"></script>
     </body>
