--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </div>
 
             <div id="buttons">
-                <button class="button-value">All</button>
-                <button class="button-value">Topwear</button>
-                <button class="button-value">Buttomwear</button>
-                <button class="button-value">Jacket</button>
-                <button class="button-value">Watch</button>
+                <button class="button-value" onclick="filterProduct('all')">All</button>
+                <button class="button-value" onclick="filterProduct('topwear')">Topwear</button>
+                <button class="button-value" onclick="filterProduct('bottomwear')">Bottomwear</button>
+                <button class="button-value" onclick="filterProduct('jacket')">Jacket</button>
+                <button class="button-value" onclick="filterProduct('watch')">Watch</button>
             </div>
             
             <div id="products"></div>
